--- a/HotelManagement/Views/Booking/BookingRoom.cshtml
+++ b/HotelManagement/Views/Booking/BookingRoom.cshtml
@@ -62,33 +62,9 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <span class="form-label">Email <span class="required-icon">*</span></span>
-                                        <input class="form-control client-email" id="client-email" type="text">
+                                        <span class="form-label">Age <span class="required-icon">*</span></span>
+                                        <input class="form-control client-age" id="client-age" type="date">
                                         <span class="form-message"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <span class="form-label">Adults</span>
-                                        <select class="form-control">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                        </select>
-                                        <span class="select-arrow"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <span class="form-label">Children</span>
-                                        <select class="form-control">
-                                            <option>0</option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                        </select>
-                                        <span class="select-arrow"></span>
                                     </div>
                                 </div>
                             </div>
@@ -128,14 +104,51 @@
                             <div class="form-btn">
                                 <button class="submit-btn">Book Now</button>
                             </div>
+                            <div class="form-btn" style=" text-align: center; margin-top: 24px; ">
+                                <a class="back-btn" href="Index">Back</a>
+                            </div>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="~/Scripts/main.js"></script>
+    @*<script src="~/Scripts/main.js"></script>*@
+    <script src="~/Scripts/Validate.js"></script>
     <script>
+        const birthDayInput = document.getElementById("client-age");
+        birthDayInput.onchange = () => {
+            console.log(birthDayInput.value)
+            const birthdate = new Date(birthDayInput.value);
+            console.log(birthdate);
+
+            // Lấy năm hiện tại
+            const currentYear = new Date().getFullYear();
+
+            console.log(currentYear)
+            // Lấy năm sinh từ đối tượng Date
+            const birthYear = birthdate.getFullYear();
+            console.log(birthYear)
+
+            // Tính toán tuổi
+            const age = currentYear - birthYear;
+            console.log(age)
+
+            Validator({
+                form: '#booking-form',
+                formGroupSelector: '.form-group',
+                errorSelector: '.form-message',
+                rules: [
+                    Validator.isRequired('#client-name', "Please enter your name"),
+                    Validator.isPhoneNumber('#client-phone-number', "Please enter your phone number"),
+                    Validator.isAgeEnough('#client-age', "You must be at least 18 years old", age)
+                ],
+                onSubmit: function (data) {
+                    console.log(data);
+                }
+            })
+        }
+        const bd = document.querySelector("#client-age");
         const VND = new Intl.NumberFormat('vi-VN', {
             style: 'currency',
             currency: 'VND',
@@ -163,28 +176,58 @@
             displayContainer.innerHTML = '';
 
             // Lặp qua danh sách các phòng đã chọn và hiển thị thông tin
+            var totalPrice = 0;
             selectedRooms.forEach(function (room) {
+                totalPrice += parseInt(room.price);
                 var roomInfoDiv = document.createElement('div');
                 roomInfoDiv.innerHTML = `
-                    <div class="row selected-infor">
-                        <div class="col-md-6">
-                            <p>Room type: <span id="type" style="font-weight: 700">${room.type}</span></p>
-                        </div>
-                        <div class="col-md-6">
-                            <p>Room Quantity: <span id="quantity" style="font-weight: 700">${room.quantity}</span></p>
-                        </div>
-                        <p>Room detail: <span id="detail" style="font-weight: 100">${room.bedInfo}, Wifi</span></p>
+                        <div class="row selected-infor">
+                            <div class="col-md-6">
+                                <p>Room type: <span id="type" style="font-weight: 700">${room.type}</span></p>
+                            </div>
+                            <div class="col-md-6">
+                                <p>Room Quantity: <span id="quantity" style="font-weight: 700">${room.quantity}</span></p>
+                            </div>
+                            <p>Room detail: <span id="detail" style="font-weight: 100">${room.bedInfo}, Wifi</span></p>
 
-                    </div>
-                    <div class="row selected-infor">
-                        <div class="col-md-12">
-                            <p>Price: <span id="price" style="font-weight: 700">${room.price}</span></p>
                         </div>
-                    </div>
-                    <hr>
-                `;
+                        <div class="row selected-infor">
+                            <div class="col-md-12">
+                                <p>Price: <span id="price" style="font-weight: 700">${VND.format(room.price)}</span></p>
+                            </div>
+                        </div>
+                        <div class="row selected-infor guest-number">
+                        </div>
+                    `;
+                const guestNumber = roomInfoDiv.querySelector(".guest-number");
+                for (var i = 0; i < room.quantity; i++) {
+                    var roomType = room.type;
+                    if (roomType == "Family Suite") {
+                        roomType = "FamilySuite";
+                    }
+                    guestNumber.innerHTML += `
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <p>Room ${i + 1}</p>
+                                <select id="${roomType}-${i}" class="form-control">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
+                                <span class="select-arrow"></span>
+                            </div>
+                        </div>
+                    `
+                }
+                roomInfoDiv.innerHTML += `
+                        <hr/>
+                    `
+
                 displayContainer.appendChild(roomInfoDiv);
             });
+            displayContainer.innerHTML += `
+                        <p style="font-weight: 700; margin: 32px 0 24px;">Total price: ${VND.format(totalPrice)}</p>
+                    `
 
             const checkin = localStorage.getItem('checkin');
             const checkout = localStorage.getItem('checkout');
@@ -238,22 +281,6 @@
         //        document.getElementById('quantity').innerText = 'No user data available for Data 2.';
         //    }
         //});
-    </script>
-    <script src="~/Scripts/Validate.js"></script>
-    <script>
-        Validator({
-            form: '#booking-form',
-            formGroupSelector: '.form-group',
-            errorSelector: '.form-message',
-            rules: [
-                Validator.isRequired('#client-name', "Please enter your name"),
-                Validator.isPhoneNumber('#client-phone-number'),
-                Validator.isEmail('#client-email')
-            ],
-            onSubmit: function (data) {
-                console.log(data);
-            }
-        })
     </script>
 </body>
 
