--- a/HotelManagement/Views/Booking/BookingRoom.cshtml
+++ b/HotelManagement/Views/Booking/BookingRoom.cshtml
@@ -46,8 +46,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <span class="form-label">Name <span class="required-icon">*</span></span>
-                                        <input class="form-control client-name" id="client-name" type="text">
+                                        <span class="form-label">Phone Number <span class="required-icon">*</span></span>
+                                        <input class="form-control client-phone-number" id="client-phone-number" type="text">
                                         <span class="form-message"></span>
                                     </div>
                                 </div>
@@ -55,8 +55,8 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <span class="form-label">Phone Number <span class="required-icon">*</span></span>
-                                        <input class="form-control client-phone-number" id="client-phone-number" type="text">
+                                        <span class="form-label">Name <span class="required-icon">*</span></span>
+                                        <input class="form-control client-name" id="client-name" type="text">
                                         <span class="form-message"></span>
                                     </div>
                                 </div>
@@ -193,7 +193,7 @@
                         </div>
                         <div class="row selected-infor">
                             <div class="col-md-12">
-                                <p>Price: <span id="price" style="font-weight: 700">${VND.format(room.price)}</span></p>
+                                <p>Price: <span id="price" style="font-weight: 700">${VND.format(parseInt(room.price))}</span></p>
                             </div>
                         </div>
                         <div class="row selected-infor guest-number">
