--- a/HotelManagement/Views/Account/Register.cshtml
+++ b/HotelManagement/Views/Account/Register.cshtml
@@ -1,43 +1,56 @@
 ﻿@model HotelManagement.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
+<span class="login100-form-title p-b-49">
+    @ViewBag.Title
+</span>
 
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
     {
-        @Html.AntiForgeryToken()
-        <h4>Create a new account.</h4>
-        <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="row">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-2 col-md-10">
-                <input type="submit" value="Register" class="btn btn-outline-dark" />
-            </div>
-        </div>
-    }
-</main>
+    <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
+        <span class="label-input100">Email</span>
+        @Html.TextBoxFor(m => m.Email, new { @class = "input100", placeholder = "Type your email" })
+        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        <i class="fa-solid fa-user input-icon"></i>
+    </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    <div class="wrap-input100 validate-input m-b-23" data-validate="Password is required">
+        <span class="label-input100">Password</span>
+        @Html.PasswordFor(m => m.Password, new { @class = "input100", placeholder = "Type your password" })
+        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+        <i class="fa-solid fa-lock input-icon"></i>
+    </div>
+
+    <div class="wrap-input100 validate-input m-b-23" data-validate="Password is required">
+        <span class="label-input100">ConfirmPassword</span>
+        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "input100", placeholder = "Confirm your password" })
+        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+        <i class="fa-solid fa-lock input-icon"></i>
+    </div>
+
+    <div class="pt-4 text-center">
+        <p class="text-danger">
+            @TempData["error"]
+        </p>
+    </div>
+
+    <div class="container-login100-form-btn">
+        <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn" type="submit">
+                Signup
+            </button>
+        </div>
+    </div>
+
+    <div class="flex-col-c p-t-125">
+        <span class="txt1 p-b-17">
+            Having an account?
+        </span>
+
+        @Html.ActionLink("Login", "Login")
+    </div>
+    }
