--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HotelManagement.PhieuThue>
+﻿@model IEnumerable<HotelManagement.PhieuDangKy>
 
 @{
     ViewBag.Title = "Index";
