--- a/HotelManagement/Areas/Admin/Views/Invoice/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Invoice/Index.cshtml
@@ -48,7 +48,7 @@
         </tr>
         @foreach (var item in Model)
         {
-            if (item.PhieuThue.HienTrang == "Đã trả phòng")
+            if (item.PhieuDangKy.HienTrang == "Đã trả phòng")
             {
                 <tr>
                     <td>
