fix view, add reset password

--- a/HotelManagement/Views/Account/ForgotPassword.cshtml
+++ b/HotelManagement/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HotelManagement.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "Reset password";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
@@ -8,27 +8,27 @@
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { role = "form" }))
 {
 
-    
+
 
     <main aria-labelledby="title">
 
         @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { role = "form" }))
         {
             @*@Html.AntiForgeryToken()
-            <h4>Enter your email.</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="row">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                <h4>Enter your email.</h4>
+                <hr />
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="row">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="offset-md-2 col-md-10">
-                    <input type="submit" class="btn btn-outline-dark" value="Email Link" />
-                </div>
-            </div>*@
+                <div class="row">
+                    <div class="offset-md-2 col-md-10">
+                        <input type="submit" class="btn btn-outline-dark" value="Email Link" />
+                    </div>
+                </div>*@
 
             <span class="login100-form-title p-b-49">
                 @ViewBag.Title
