--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Edit.cshtml
@@ -62,8 +62,8 @@
                             <h2 style="margin-left: auto; margin-right: auto;">Add Service Form</h2>
                             <div class="form-group ml-0">
                                 <label class="control-label">Service Name</label>
-                                @*@Html.DropDownList("DichVu", null, htmlAttributes: new { @class = "form-control service-name" })*@
-                                @Html.DropDownListFor(model => model.PhieuThuePhongs, new SelectList(new List<string> { "Nhà Hàng", "Spa", "Hồ Bơi", "Gym", "Giặt, ủi" }), null, new { @class = "form-control service-name" })
+                                @Html.DropDownList("DichVu", null, htmlAttributes: new { @class = "form-control service-name" })
+                                @*@Html.DropDownListFor(model => model.PhieuThuePhongs, new SelectList(new List<string> { "Nhà Hàng", "Spa", "Hồ Bơi", "Gym", "Giặt, ủi" }), null, new { @class = "form-control service-name" })*@
                                 <span class="form-message"></span>
                             </div>
                             <div class="form-group ml-0">
