--- a/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<HotelManagement.DichVu>
+﻿﻿@model PagedList.IPagedList<HotelManagement.DichVu>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
@@ -25,10 +26,10 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TenDichVu)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().TenDichVu)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GiaDichVu)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().GiaDichVu)
             </th>
             <th>
                 Action
@@ -56,4 +57,8 @@
         }
 
     </table>
+</div>
+<!-- Hiển thị phân trang -->
+<div class="text-center">
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }), PagedListRenderOptions.ClassicPlusFirstAndLast)
 </div>
